Add !cata command

--- a/templates/hero-zodiac.ejs
+++ b/templates/hero-zodiac.ejs
@@ -1,6 +1,6 @@
 **<%= zodiac %>**
 
 __Unrecorded History__
-Skill Upgrades: <%= skillCatalyst %> (<%= skillCatalystLocation %>)
-Basic Awakening: <%= awkCatalyst %> (<%= awkCatalystLocation %>)
-Epic Awakening: <%= epicAwkCatalyst %> (<%= epicAwkCatalystLocation %>)
+Skill Upgrades: <%= skillCatalyst %> (<%= skillCatalystLocation.farm %>)
+Basic Awakening: <%= awkCatalyst %> (<%= awkCatalystLocation.farm %>)
+Epic Awakening: <%= epicAwkCatalyst %> (<%= epicAwkCatalystLocation.farm %>)
