Starting to productionize

--- a/templates/hero-zodiac.ejs
+++ b/templates/hero-zodiac.ejs
@@ -1,4 +1,4 @@
-**<%= zodiac %>**
+**<%= name %>** - <%= zodiac %>
 
 __Unrecorded History__
 Skill Upgrades: <%= skillCatalyst %> (<%= skillCatalystLocation.farm %>)
