--- a/templates/help.ejs
+++ b/templates/help.ejs
@@ -1,17 +1,17 @@
-
-= Artifacts =
-  !arti <artifact name> :: Display Artifact information.
-
 = Heroes =
   !bs <hero> [50|60] :: Base stats for a hero at level 50 or 60.
   !farm <hero> :: Display the best farming locations for a hero.
-  ![s1|s2|s3] <hero> :: Display skill info for a hero.
   !link <hero> :: Print a link to epic7x for more hero details.
 
 = Reference =
-  ![catalyst|cata] <catalyst name> :: Display information on farming the catalyst.
+  ![catalyst|cata] <catalyst name> :: Display location for farming.
   !debuff <effectiveness> <effect resist> :: Show the likelihood of debuffing a hero.
 
+= Patties Database =
+  !skills <hero> :: Display all skills for a hero using a user-updated database.
+  ![s1|s2|s3] <hero> :: Display skill info for a hero using a user-updated database.
+  !arti <artifact name> :: Display Artifact information using a user-updated database.
+  
 = Admin Functions =
   ![s1|s2|s3] <hero> set <Full text description>
   !arti <artifact> set <Full text description>
