--- a/templates/help.ejs
+++ b/templates/help.ejs
@@ -7,6 +7,10 @@
   ![catalyst|cata] <catalyst name> :: Display location for farming.
   !debuff <effectiveness> <effect resist> :: Show the likelihood of debuffing a hero.
 
+= Bakery =
+  !bake <Discord Nick> :: Order a pastry for another user. Comes in Common/Rare/Epic/Legendary.
+  !bakestats <Discord nick :: Display the baking stats for a user.
+
 = Patties Database =
   !skills <hero> :: Display all skills for a hero using a user-updated database.
   ![s1|s2|s3] <hero> :: Display skill info for a hero using a user-updated database.
